# floo-cli

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  install.sh  pyproject.toml
.claude/: settings.json
.claude/hooks/: evaluate-skills.sh
.claude/skills/rust/: SKILL.md
.claude/skills/workflow/: SKILL.md
.githooks/: pre-push
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  release.yml  sync-release.yml
floo/: __init__.py  api_client.py  archive.py  cli.py  config.py  constants.py  detection.py  errors.py  names.py  output.py  resolve.py
floo/commands/: apps.py  auth.py  deploy.py  domains.py  env.py
plugin/.claude-plugin/: plugin.json
plugin/skills/floo/: SKILL.md
plugin/skills/floo-security/: SKILL.md
plugin/skills/floo-services/: SKILL.md
scripts/: floo-dev  floo-local  install-hooks.sh  test
skills/: floo.md
skills/floo/: SKILL.md
src/: api_client.rs  api_types.rs  archive.rs  cli.rs  config.rs  confirm.rs  constants.rs  container.rs  deploy_status.rs  detection.rs  dev_proxy.rs  dockerfile.rs  errors.rs  main.rs  names.rs  output.rs  postgres_ready.rs  project_config.rs  redact.rs  resolve.rs  services_lock.rs  updater.rs  version_check.rs
src/commands/: analytics.rs  apps.rs  auth.rs  billing.rs  check.rs  command_tree.rs  cron.rs  db.rs  deploy.rs  deploys.rs  dev.rs  docs.rs  doctor.rs  domains.rs  edge.rs  env.rs  feedback.rs  github.rs  guardrails.rs  images.rs  init.rs  logs.rs  mod.rs  notifications.rs  orgs.rs  previews.rs  releases.rs  reparo.rs  rollbacks.rs  run.rs  service_mgmt.rs  services.rs  skills.rs  storage.rs  update.rs
src/project_config/: app_config.rs  discover.rs  mod.rs  resolve.rs  service_config.rs
tests/: cli_tests.rs  install_script_e2e.sh  install_script_test.sh  mock_api_tests.rs  no_dead_doc_links.rs  pre_push_hook_test.sh  test_apps_command.py  test_archive.py  test_deploy_command.py  test_detection.py  test_domains_command.py  test_env_command.py  test_script_test.sh
