[package]
name = "floo"
version = "0.1.1"
edition = "2021"
description = "CLI for Floo — deploy, manage, and observe web apps"
license = "MIT"
repository = "https://github.com/getfloo/floo-cli"
homepage = "https://getfloo.com"
keywords = ["deploy", "cli", "cloud", "serverless"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "floo-local"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
colored = "2"
comfy-table = "7"
indicatif = "0.17"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = "0.4"
sha2 = "0.10"
thiserror = "2"
anyhow = "1"
open = "5"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
mockito = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"
