[package]
name = "floo"
version = "0.0.0-dev"
edition = "2021"
description = "CLI for Floo — deploy, manage, and observe web apps"
license = "MIT"
repository = "https://github.com/getfloo/floo-cli"
homepage = "https://getfloo.com"
keywords = ["deploy", "cli", "cloud", "serverless"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "floo"
path = "src/main.rs"

[[bin]]
name = "floo-local"
path = "src/main.rs"

# Dev-stack variant. Same source; behavior diverges by binary basename
# in src/config.rs (BinaryVariant::Dev → dev API + .floo-dev config).
# A sanctioned, credential-isolated surface for dev-stack ops.
[[bin]]
name = "floo-dev"
path = "src/main.rs"

[dependencies]
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
colored = "2"
comfy-table = "7"
indicatif = "0.18"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
ring = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = "0.4"
sha2 = "0.10"
libc = "0.2"
thiserror = "2"
anyhow = "1"
open = "5"
regex = { version = "1", default-features = false, features = ["std", "unicode-perl", "unicode-case"] }
once_cell = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
mockito = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"
