[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "floo-cli"
version = "0.1.0"
description = "CLI for Floo — deploy, manage, and observe web apps"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12,<1.0",
    "rich>=13.7,<14.0",
    "httpx>=0.27,<1.0",
    "pydantic>=2.5,<3.0",
]

[project.scripts]
floo = "floo.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "ty",
    "respx>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["floo"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "UP",
    "SIM",
]

[tool.ty]
python-version = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
